--- a/index.html
+++ b/index.html
@@ -138,10 +138,29 @@
          */
         _bindEvents() {
             window.addEventListener('resize', () => this._setup());
-            window.addEventListener('mousemove', (event) => {
-                this.mouse.targetX = event.clientX;
-                this.mouse.targetY = event.clientY;
-            });
+
+            // Unified handler for both mouse and touch events
+            const handlePointerMove = (event) => {
+                // Prevent default scrolling on touch devices
+                if (event.type === 'touchmove') {
+                    event.preventDefault();
+                }
+                
+                // Check if it's a touch event
+                if (event.touches && event.touches.length > 0) {
+                    this.mouse.targetX = event.touches[0].clientX;
+                    this.mouse.targetY = event.touches[0].clientY;
+                } else if (event.clientX) {
+                    // It's a mouse event
+                    this.mouse.targetX = event.clientX;
+                    this.mouse.targetY = event.clientY;
+                }
+            };
+
+            // Add listeners for mouse and touch
+            window.addEventListener('mousemove', handlePointerMove);
+            window.addEventListener('touchmove', handlePointerMove, { passive: false });
+            window.addEventListener('touchstart', handlePointerMove);
         }
 
         /**
@@ -245,3 +264,4 @@
 </script>
 </body>
 </html>
+
